# clialogs

./: Cargo.toml  custom_dialog.json  readme.md  test.sh
.github/workflows/: release.yaml
def_layouts/: calendar.json  color.json  input.json  list.json  log_in.json  progress.json  select.json
src/: cli.rs  custom_dialog.rs  gui.rs  lib.rs  main.rs  response.rs
