[package]
name = "clialogs"
version = "1.0.6"
edition = "2021"

[dependencies]
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = ["wgpu"] }
notify-rust = "4.5.10"
rfd = "0.10.0"
serde = { version = "1.0.145", features = ["derive", "std"] }
serde_json = "1.0.85"
egui_extras = { version = "0.20.0" , features = ["datepicker"] }
chrono = "0.4.22"
image = "0.24.4"
clap = { version = "4.0.9", features = ["derive"] }
regex = "1.6.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z"  # Optimize for size
codegen-units = 1
panic = "abort"