[package]
name = "clialogs"
version = "1.1.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "glow".
    "x11",       # To support Linux (and CI)
] }
notify-rust = "4.5.10"
rfd = "0.10.0"
serde = { version = "1.0.219", features = ["derive", "std"] }
serde_json = "1.0.85"
egui_extras = { version = "0.31" , features = ["datepicker", "all_loaders"] }
chrono = "0.4.22"
image = { version = "0.25.6", features = ["jpeg", "png"] }
clap = { version = "4.0.9", features = ["derive"] }
regex = "1.6.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z"  # Optimize for size
codegen-units = 1
panic = "abort"